[gd_scene load_steps=6 format=3 uid="uid://b6hgda6boq6ea"]

[ext_resource type="Script" path="res://Camera.gd" id="1_2mcbw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0u18q"]
size = Vector2(294, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dpbct"]
size = Vector2(294, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0syg"]
size = Vector2(294, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rorff"]
size = Vector2(16, 294)

[node name="Camera" type="Camera2D"]
offset = Vector2(128, 128)
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("1_2mcbw")

[node name="left" type="Area2D" parent="."]
position = Vector2(-2, 0)
collision_layer = 2
collision_mask = 2

[node name="left" type="CollisionShape2D" parent="left"]
position = Vector2(-9, 128)
rotation = 1.5708
shape = SubResource("RectangleShape2D_0u18q")

[node name="up" type="Area2D" parent="."]
position = Vector2(0, -2.5)
collision_layer = 2
collision_mask = 2

[node name="up" type="CollisionShape2D" parent="up"]
position = Vector2(128, -8.5)
shape = SubResource("RectangleShape2D_dpbct")

[node name="down" type="Area2D" parent="."]
position = Vector2(0, 2.5)
collision_layer = 2
collision_mask = 2

[node name="down" type="CollisionShape2D" parent="down"]
position = Vector2(128, 264.5)
shape = SubResource("RectangleShape2D_l0syg")

[node name="right" type="Area2D" parent="."]
position = Vector2(2, 0)
collision_layer = 2
collision_mask = 2

[node name="right" type="CollisionShape2D" parent="right"]
position = Vector2(265, 128)
shape = SubResource("RectangleShape2D_rorff")

[connection signal="body_entered" from="left" to="." method="_on_left_body_entered"]
[connection signal="body_entered" from="up" to="." method="_on_up_body_entered"]
[connection signal="body_entered" from="down" to="." method="_on_down_body_entered"]
[connection signal="body_entered" from="right" to="." method="_on_right_body_entered"]
